# rust_learning

./: .gitignore  README.md
web_scrap_cli/: Cargo.toml  web_scrap_cli.db  web_scrap_cli_cfg.yaml
web_scrap_cli/src/: config.rs  db_utils.rs  file_utils.rs  main.rs  scrap_utils.rs
web_server/: Cargo.toml
