[package]
name = "web_scrap_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11.9", features = ["blocking", "cookies"] }
select = "0.5.0"
error-chain = "0.12.4"
tokio = {version = "1.17.0", features = ["full"]}
clap = {version = "3.1.2", features = ["derive"] }
yaml-rust = "0.4.5"